# SovLink

./: .gitignore  README.html  README.md  troubleshooting.txt
Clients/: Clients.pro  controleur.cpp  controleur.h  crypto.cpp  crypto.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  network.cpp  network.h
Planification/: Organisation mini-projet(Feuil1).csv  Organisation mini-projet(Feuil1).xlsx  exemple.docx  ~$Organisation mini-projet(Feuil1).xlsx
Serveurs/: Serveurs.pro  main.cpp  routeurcisco.cpp  routeurcisco.h
SovLink2.0/TP_Client/: TP_Client.pro
SovLink2.0/TP_Commun/: Crypto.cpp  Crypto.h  Protocole.cpp  Protocole.h  TP_Commun.pro  main.cpp
SovLink2.0/TP_Serveur/: TP_Serveur.pro
backup/TP_SOCKET_CLIENT/: client.cpp  client.h  main.cpp
backup/TP_SOCKET_CLIENT_Test/: client_test.cpp  client_test.h  inputreader.h
backup/TP_SOCKET_SERVER/: main.cpp  server.h
backup/TP_SOCKET_SERVER_Test/: main.cpp  server_test.h
backup/TP_SOCKET_SERVER_Test/.qtc_clangd/: compile_commands.json
backup/TP_SOCKET_SERVER_Test/.qtc_clangd/.cache/clangd/index/: QDataStream.7DCDB7EA5419F12F.idx  QProcess.1F6B0B50A2CCCD84.idx  main.cpp.E79231370B47A4B9.idx  q20iterator.h.017095FEB995BECB.idx  qcomparehelpers.h.5A388F23FD8C7C37.idx  qcoreapplication.h.9EDD6C3361215F4E.idx  qdatastream.h.7763E8BEB1F9B0B6.idx  qdebug.h.68110D7A6D144944.idx  qhash.h.B533AF49331E7298.idx  qmap.h.685CDC86095D90AA.idx  qnativeinterface.h.AD03702198301853.idx  qobject.h.AAD5FDAD34F92602.idx  qobjectdefs.h.96D53E1D21E4D6A6.idx  qset.h.1CC4BE46A421AE22.idx  qshareddata.h.2F60D7B418656AC3.idx  qsharedpointer_impl.h.12B88EFB9E637C77.idx  qspan.h.83E384D482F988A5.idx  qtclasshelpermacros.h.E495780D8F1598F4.idx  qtmetamacros.h.63F018BF24DD43FB.idx  qvariant.h.E1D179CE6CDC8D3A.idx  qvarlengtharray.h.07A05F48A3AA53F7.idx  server_test.h.492CFF63C2A7679F.idx
backup/build-TP_SOCKET_CLIENT-Desktop_Qt_5_9_0_MinGW_32bit-Debug/: Makefile.Debug
build-TP_SOCKET_CLIENT-Desktop_Qt_5_9_0_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
build-sovlink-Desktop_Qt_5_9_0_MinGW_32bit-Debug/: Makefile
build-sovlink-Desktop_Qt_5_9_0_MinGW_32bit-Debug/client/: Makefile  Makefile.Debug  Makefile.Release  sovlink_client_resource.rc
build-sovlink-Desktop_Qt_5_9_0_MinGW_32bit-Debug/server/: Makefile  Makefile.Debug  Makefile.Release
libsodium-win64/lib/: CMakeCache.txt  qtcsettings.cmake
media/: arborescence.txt
sovlink/: CMakeCache.txt  CMakeLists.txt  qtcsettings.cmake
sovlink/client/: Client.cpp  Client.h
sovlink/common/: Crypto.cpp  Protocol.h
sovlink/server/: Server.cpp
sovlink/ui/: ChatWindow.cpp  ChatWindow.h  LoginWindow.cpp  LoginWindow.h  MainWindow.cpp  MainWindow.h
sovlink_pro/: README.md  sovlink.pro
sovlink_pro/client/: client.pro  main_client.cpp
sovlink_pro/common/: Protocol.cpp  common.pri
sovlink_pro/server/: ClientSession.cpp  ClientSession.h  ClientSession.h.autosave  Server.h  main_server.cpp  server.pro
teste_0.1/TP_SOCKET_CLIENT/: TP_SOCKET_CLIENT.pro  TP_SOCKET_CLIENT.pro.autosave  TP_SOCKET_CLIENT.pro.user.26c2765  client.cpp  client.h  main.cpp
teste_0.1/TP_SOCKET_CLIENT_Test/: TP_SOCKET_CLIENT_Test.pro  client_test.cpp  client_test.h  main.cpp
teste_0.1/TP_SOCKET_SERVER/: TP_SOCKET_SERVER.pro.user.56e572d  main.cpp  server.cpp  server.h
teste_0.1/TP_SOCKET_SERVER_Test/: TP_SOCKET_SERVER_Test.pro  server_test.cpp  server_test.h
teste_0.1/TP_SOCKET_SERVER_Test/.qtc_clangd/.cache/clangd/index/: qabstractsocket.h.32746671F756D7E2.idx  qflags.h.1E6F4D547E7E88F9.idx  qiodevice.h.4DD6DFCD503258D6.idx  qtcpserver.h.7C899CD7141B39F0.idx  server_test.cpp.7924F3024D37F03C.idx  server_test.h.492CFF63C2A7679F.idx
teste_0.1/build-TP_SOCKET_CLIENT-Desktop_Qt_5_9_0_MinGW_32bit-Debug/: Makefile  Makefile.Release
teste_0.1/build-TP_SOCKET_CLIENT-Desktop_Qt_5_9_0_MinGW_32bit-Debug/debug/: moc_client.cpp
